Sep 24, 2019
  added gff3 generator for protein domains

ver 1.4.18, Jun 6, 2019
  gff3 for genes generator: optimized logging and parallelized code

ver 1.4.17, Mar 5, 2019
  JBrowse track loader: added track loading for RNAcentral

ver 1.4.16, Jan 31, 2019
  added loading of PIG tracks into JBrowse

ver 1.4.15, Jan 30, 2019
  added generation of gene tracks for PIG

ver 1.4.14, Jan 16, 2019
  jbrowse track loader: updated url for popup menu content (it is absolute now, instead of relative,
    to support JBrowse installation on the cloud)

ver 1.4.13, Nov 29, 2018
  ensembl prep module: added handling of scaffold assemblies like chinchilla

ver 1.4.12, Nov 21, 2018
  added a module to prepare Ensembl gff3 files for loading into JBrowse

ver 1.4.11, Nov 19, 2018
  AGR gff3 files: refactored generation of IDs, to produce smaller file

ver 1.4.10, Nov 15, 2018
  updated scripts to generate all files in directory /home/rgddata/pipelines/RGDGff3Pipeline/data;
  previously it was: /home/rgddata/pipelines/RGDGff3Pipeline/dist/log/RGDGFF3/Output

ver 1.4.9, Nov 14, 2018
  AGR gff3 files: for transcripts, added generation of 'biotype' attribute
  (to be used by Ensembl VEP tool: https://useast.ensembl.org/info/docs/tools/vep/script/vep_cache.html#gfftypes)

ver 1.4.8, Nov 6, 2018
  tuned up loading of Ensembl tracks for Rnor6 genes into JBrowse; per RGDD-1523
  scripts fixups: replaced all occurrences of server KYLE with REED

ver 1.4.7, Oct 23, 2018
  generation of fasta file with primer pair sequences for markers: updated to use the new sequence data model

ver 1.4.6, Sep 28, 2018
  moved from subversion to github

ver 1.4.5, Jan 4, 2018
  Genes: discontinued generation of gene tracks in gff format

ver 1.4.4, Sep 29, 2017
  GeneAgr: tuned up generation of Note field, so the genes will look better in AGR browser

ver 1.4.3, Sep 20, 2017
  added generation of gff3 files for AGR

ver 1.4.2, Jul 21, 2017
  initial version for DbSnp tracks for human build 38 and 37
